bonus/confs/gitlab-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab-deployment
  namespace: gitlab
  labels:
    app: gitlab-deployment
spec:
  selector:
    matchLabels:
      app: gitlab-deployment
  replicas: 1
  template:
    metadata:
      labels:
        app: gitlab-deployment
    spec:
      containers:
      - name: gitlab-ce
        image: gitlab/gitlab-ce:latest
        ports:
        - containerPort: 8080
        - containerPort: 8443
      - env:
          GITLAB_OMNIBUS_CONFIG: "external_url 'http://localhost/'; gitlab_rails['lfs_enabled'] = true;"
          GITLAB_ROOT_PA5SWORD: "passwordistooshortshiish"
        volumes:
          - /home/normal-user/Desktop/InceptionOfThings/bonus/scripts/gitlab/volumes/config:/etc/gitlab
          - /home/normal-user/Desktop/InceptionOfThings/bonus/scripts/gitlab/volumes/logs:/var/log/gitlab
          - /home/normal-user/Desktop/InceptionOfThings/bonus/scripts/gitlab/volumes/data:/var/opt/gitlab
          - /home/normal-user/Desktop/InceptionOfThings/bonus/scripts/gitlab/volumes:/etc/gitlab/initial_root_password
