bonus/confs/gitlab-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab-service
  namespace: gitlab
spec:
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
      name: gitlab-http
    - port: 8443
      targetPort: 443
      name: gitlab-https
  selector:
    app:  gitlab-service
---
