bonus/confs/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: application1
  namespace: dev
spec:
  ports:
    - port: 80
      targetPort: 8888
      protocol: TCP
      name: application1-port
  selector:
    app:  application1
---
